--- a/config/locales/en/application.en.yml
+++ b/config/locales/en/application.en.yml
@@ -1,11 +1,11 @@
 en:
   application:
-    name: Untitled Application
+    name: Rec Ball Manager
     owner: Unidentified Developer
     description: "You can update this description in `config/locales/en/application.en.yml`."
-    keywords: untitled application seo keywords
+    keywords: rec ball manager seo keywords
     support_email: change.me@localhost
-    key: untitled_application
+    key: rec_ball_manager
   webhooks/outgoing/endpoints:
     fields:
       api_version:
